--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-"Hello, world" 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Gente de Oficio</title>
+
+    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="author" content="LayoutIt!">
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+  </head>
+  <body>
+
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<nav class="navbar navbar-default" role="navigation">
+				<div class="navbar-header">
+
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					</button> <a class="navbar-brand" href="#">Brand</a>
+				</div>
+
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active">
+							<a href="#">Inicio</a>
+						</li>
+						<li>
+							<a href="#">Nosotros</a>
+						</li>
+						<li class="dropdown">
+							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios<strong class="caret"></strong></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="#">Servicio 1</a>
+								</li>
+								<li>
+									<a href="#">Servicio 2</a>
+								</li>
+								<li>
+									<a href="#">Servicio 3</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									<a href="#">Otros Servicios</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									<a href="#">Otros Servicios</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+					<form class="navbar-form navbar-right" role="search">
+						<div class="form-group">
+							<input class="form-control" type="text">
+						</div>
+						<button type="submit" class="btn btn-default">
+							Submit
+						</button>
+					</form>
+					<!--<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="#">Link</a>
+						</li>
+						<li class="dropdown">
+							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="#">Action</a>
+								</li>
+								<li>
+									<a href="#">Another action</a>
+								</li>
+								<li>
+									<a href="#">Something else here</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									<a href="#">Separated link</a>
+								</li>
+							</ul>
+						</li>
+					</ul> -->
+				</div>
+
+			</nav>
+			<div class="jumbotron">
+				<h1>Bienvenido!! <small>Dinos lo que necesitas</small></h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur nostrum porro tempore maxime harum inventore. Quaerat expedita sint ullam accusantium magni consequatur similique in nisi maiores. Aliquam eum, aspernatur doloremque.
+				</p>
+				<p>
+					<a class="btn btn-primary btn-large" href="#">Agenda una cita</a>
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<h2>
+				Heading
+			</h2>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+		</div>
+		<div class="col-md-4">
+			<h2>
+				Heading
+			</h2>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+		</div>
+		<div class="col-md-4">
+			<h2>
+				Heading
+			</h2>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+		</div>
+	</div>
+  <br>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title">Categoría de Servicios</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title">Categoría de Servicio</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title">Categoría de Servicios</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title">Categoría de Servicio</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+</html>
+
