--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 						 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-					</button> <a class="navbar-brand" href="#">Brand</a>
+					</button> <a class="navbar-brand" href="#">Logo</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -33,7 +33,7 @@
 							<a href="#">Inicio</a>
 						</li>
 						<li>
-							<a href="#">Nosotros</a>
+							<a href="about.html#">Nosotros</a>
 						</li>
 						<li class="dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios<strong class="caret"></strong></a>
@@ -106,47 +106,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="col-md-4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="col-md-4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-	</div>
-  <br>
+	<br>
+  <div class="well" style="text-align: center;"><h2>Lista de Servicios</h3></div>
   <div class="row">
     <div class="col-md-3">
       <div class="panel panel-default">
       <div class="panel-heading">
-      <h3 class="panel-title">Categoría de Servicios</h3>
+      <h3 class="panel-title"> Servicios</h3>
       </div>
       <div class="panel-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
@@ -156,7 +122,7 @@
     <div class="col-md-3">
       <div class="panel panel-default">
       <div class="panel-heading">
-      <h3 class="panel-title">Categoría de Servicio</h3>
+      <h3 class="panel-title"> Servicios</h3>
       </div>
       <div class="panel-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
@@ -166,7 +132,7 @@
     <div class="col-md-3">
       <div class="panel panel-default">
       <div class="panel-heading">
-      <h3 class="panel-title">Categoría de Servicios</h3>
+      <h3 class="panel-title"> Servicios</h3>
       </div>
       <div class="panel-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
@@ -176,7 +142,49 @@
     <div class="col-md-3">
       <div class="panel panel-default">
       <div class="panel-heading">
-      <h3 class="panel-title">Categoría de Servicio</h3>
+      <h3 class="panel-title"> Servicios</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+  </div>2  <br>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title"> Servicios</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title"> Servicios</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title"> Servicios</h3>
+      </div>
+      <div class="panel-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
+      </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+      <div class="panel-heading">
+      <h3 class="panel-title"> Servicios</h3>
       </div>
       <div class="panel-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae architecto nesciunt inventore fugiat.
@@ -184,11 +192,53 @@
       </div>
     </div>
   </div>
+  <div class="row">
+  <div class="well"><h1 style="text-align: center;">Como Funciona</h1></div>
+    <div class="col-md-4">
+      <h2 style="text-align: center;">
+        Paso 1
+      </h2>
+      <p>
+        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      </p>
+      <p>
+        <a class="btn" href="#">View details »</a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <h2 style="text-align: center;">
+        Paso 2
+      </h2>
+      <p>
+        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      </p>
+      <p>
+        <a class="btn" href="#">View details »</a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <h2 style="text-align: center;">
+        Paso 3
+      </h2>
+      <p>
+        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      </p>
+      <p>
+        <a class="btn" href="#">View details »</a>
+      </p>
+    </div>
+  </div>
 </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+
   </body>
+  <footer class="footer">
+
+        <p class="text-muted" style="background: #444444; color: #EEE;">footer content here.</p>
+
+  </footer>
 </html>
 
