--- a/2.html
+++ b/2.html
@@ -3,13 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap-theme.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="navbar navbar-default">
-
-      </div>
+      <nav role="navigation" class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Logo</a>
+            </div>
+            <div id="navbarCollapse" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Inicio</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li class="dropdown">
+                  <a data-toggle="dropdown" class="dropdown-toggle" href="#">Servicios <b class="caret"></b></a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="#">Servicio 1</a></li>
+                    <li><a href="#">Servicio 2</a></li>
+                    <li><a href="#">Servicio 3</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Contacto</a></li>
+              </ul>
+            </div>
+          </div>
+      </nav>
     </div><!-- navbar -->
 
     <div class="row" id="slideshow">
