--- a/2.html
+++ b/2.html
@@ -10,34 +10,43 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <nav role="navigation" class="navbar navbar-default">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Logo</a>
-            </div>
-            <div id="navbarCollapse" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
+            </button>
+            <a href="#" class="navbar-brand">Logo</a>
+        </div>
+        <!-- Collection of nav links, forms, and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Inicio</a></li>
                 <li><a href="#">Nosotros</a></li>
                 <li class="dropdown">
-                  <a data-toggle="dropdown" class="dropdown-toggle" href="#">Servicios <b class="caret"></b></a>
-                  <ul role="menu" class="dropdown-menu">
-                    <li><a href="#">Servicio 1</a></li>
-                    <li><a href="#">Servicio 2</a></li>
-                    <li><a href="#">Servicio 3</a></li>
-                  </ul>
+                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Servicios <b class="caret"></b></a>
+                    <ul role="menu" class="dropdown-menu">
+                        <li><a href="#">Servicio 1</a></li>
+                        <li><a href="#">Servicio 2</a></li>
+                        <li><a href="#">Servicio 3</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Otros Servicios</a></li>
+                    </ul>
                 </li>
-                <li><a href="#">Contacto</a></li>
-              </ul>
-            </div>
-          </div>
-      </nav>
+            </ul>
+            <form role="search" class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" placeholder="Buscar" class="form-control">
+                </div>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Login</a></li>
+            </ul>
+        </div>
+    </nav>
     </div><!-- navbar -->
 
     <div class="row" id="slideshow">
@@ -92,5 +101,8 @@
   </div>
 
   <!--</div>-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
