--- a/2.html
+++ b/2.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link href="css/style.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
   <div class="container-fluid">
@@ -49,70 +50,87 @@
     </nav>
     </div><!-- navbar -->
 
-    <div class="row" id="slideshow">
+    <!--<div class="row" id="slideshow">-->
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="http://placehold.it/1200x500/3498db/2980b9" alt="First slide">
-                        <div class="carousel-caption">
+  <div class="row">
+    <!-- Carousel -->
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+          <div class="item active">
+            <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="First slide">
+                    <!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                              <span>Welcome to <strong>LOREM IPSUM</strong></span>
+                            </h2>
+                            <br>
                             <h3>
-                                First slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
                         </div>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/1200x500/9b59b6/8e44ad" alt="Second slide">
-                        <div class="carousel-caption">
+                    </div><!-- /header-text -->
+          </div>
+          <div class="item">
+            <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Second slide">
+            <!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span>Welcome to LOREM IPSUM</span>
+                            </h2>
+                            <br>
                             <h3>
-                                Second slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
                         </div>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/1200x500/34495e/2c3e50" alt="Third slide">
-                        <div class="carousel-caption">
+                    </div><!-- /header-text -->
+          </div>
+          <div class="item">
+            <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Third slide">
+            <!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span>Welcome to LOREM IPSUM</span>
+                            </h2>
+                            <br>
                             <h3>
-                                Third slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
                         </div>
-                    </div>
-                </div>
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
-                        href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
-                        </span></a>
-            </div>
-            <div class="main-text hidden-xs">
-                <div class="col-md-12 text-center">
-                    <h1>
-                        Static Headline And Content</h1>
-                    <h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    </h3>
-                    <div class="">
-                        <a class="btn btn-clear btn-sm btn-min-block" href="http://www.jquery2dotnet.com/">Login</a><a class="btn btn-clear btn-sm btn-min-block"
-                            href="http://www.jquery2dotnet.com/">Registration</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="push">
+                    </div><!-- /header-text -->
+          </div>
+      </div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div><!-- /carousel -->
+  </div>
 </div>
 
-    </div><!-- slider -->
+    <!--</div><!-- slider -->
 
     <div class="row">
       <div class="block-1">
