--- a/2.html
+++ b/2.html
@@ -6,7 +6,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-theme.css" rel="stylesheet">
-
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container-fluid">
@@ -37,7 +37,17 @@
                         <li><a href="#">Otros Servicios</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Dashboards<b class="caret"></b></a>
+                    <ul role="menu" class="dropdown-menu">
+                        <li><a href="#">Clientes</a></li>
+                        <li><a href="#">Especialistas</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Blog</a></li>
             </ul>
+<!-- Para activar luego
             <form role="search" class="navbar-form navbar-left">
                 <div class="form-group">
                     <input type="text" placeholder="Buscar" class="form-control">
@@ -46,13 +56,40 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Login</a></li>
             </ul>
+Para activar luego-->
+            <div class="social navbar-right" >
+            <ul>
+                <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-google-plus"></i></a></li>
+<!-- Activar Luego
+                <li><a href="#"><i class="fa fa-lg fa-github"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-flickr"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-vimeo-square"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-stack-overflow"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-dropbox"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-tumblr"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-dribbble"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-skype"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-stack-exchange"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-xing"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-rss"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-foursquare"></i></a></li>
+                <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
+Activar luego-->
+            </ul>
+</div>
         </div>
     </nav>
     </div><!-- navbar -->
 
     <!--<div class="row" id="slideshow">-->
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <!-- Carousel -->
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -65,7 +102,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
           <div class="item active">
-            <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="First slide">
+            <img src="http://placehold.it/1500x600/dddddd/000000/Slide-01" alt="First slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -131,23 +168,76 @@
 </div>
 
     <!--</div><!-- slider -->
-
+<br>
     <div class="row">
       <div class="block-1">
+          <div class="col-sm-12 col-md-6">
+            <div class="thumbnail">
+              <img src="https://placehold.it/700x300" alt="Imagen 01">
+              <div class="caption">
+                <h3 class="text-center">AGENDA UNA CITA</h3>
+                <p class="text-center">Recibe el mejor Servicio</p>
+                <p class="text-center"><a href="#" class="btn btn-primary" role="button">Ingresar</a> <a href="#" class="btn btn-default" role="button">Registrarse</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <div class="thumbnail">
+              <img src="https://placehold.it/700x300" alt="Imagen 01">
+              <div class="caption">
+                <h3 class="text-center">OFRECE TUS SERVICIOS</h3>
+                <p class="text-center">Se nuestro socio!!</p>
+                <p class="text-center"><a href="#" class="btn btn-primary" role="button">Ingresar</a> <a href="#" class="btn btn-default" role="button">Registrarse</a></p>
+              </div>
+            </div>
+          </div>
 
       </div>
     </div><!-- block-1 -->
 
     <div class="row">
+      <div class="container-fluid">
       <div class="middle-heading">
-
+        <div class="well"><h1><strong>PASOS A SEGIR</strong></h1>
+        </div>
       </div>
+    </div>
     </div><!-- middle- heading -->
     <div class="row">
-      <div class="steps">
-
+    <div class="hiw-container" id="hiw-container">
+  <h3>Como Funciona</h3>
+  <p>Puedes contratar al profesional que desees en solo 3 pasos</p>
+  <ul class="steps-list">
+    <li class="steps-card col-md-4">
+      <div class="col-xs-4 col-md-3">
+        <img src="assets/icons/submit_request.svg">
       </div>
-    </div><!-- steps to try -->
+      <div class="col-xs-8">
+        <h3>1. Envía un requerimiento</h3>
+          <p>La mejor forma de encontrar<br>al profesional correcto para ti</p>
+      </div>
+    </li>
+    <li class="steps-card col-md-4">
+      <div class="col-xs-4 col-md-3">
+        <img src="assets/icons/get_quotes.svg">
+      </div>
+      <div class="col-xs-8">
+        <h3>2. Obtén un presupuesto</h3>
+        <p>En pocas horas<br>te responderán con sus cotizaciones</p>
+      </div>
+    </li>
+    <li class="steps-card col-md-4">
+      <div class="col-xs-4 col-md-3">
+        <img src="assets/icons/hire_the_best.svg">
+      </div>
+      <div class="col-xs-8">
+        <h3>3. Contrata al mejor</h3>
+        <p>Mira su trabajo pasado<br>conversa y contrata al mejor.</p>
+      </div>
+    </li>
+  </ul>
+</div>
+</div>
 
     <div class="row">
       <div class="bottom-columns">
@@ -175,11 +265,12 @@
       </div>
     </div><!-- footer -->
 
-  </div>
+
 
   <!--</div>-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>
 
 </body>
 </html>
