Agregado de sugerencias Luis 19/11/2015

--- a/2.html
+++ b/2.html
@@ -62,6 +62,7 @@ Para activar luego-->
                 <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-lg fa-google-plus"></i></a></li>
+                <li><a href="#">Login</a></li>
 <!-- Activar Luego
                 <li><a href="#"><i class="fa fa-lg fa-github"></i></a></li>
                 <li><a href="#"><i class="fa fa-lg fa-pinterest"></i></a></li>
@@ -284,6 +285,12 @@ Activar luego-->
       <div class="copyright">
         <li>Powered by <a href="http://getbootstrap.com/">Bootstrap</a></li>
         <li>Copyright 2015 <a href="http://gentedeoficio.com/">Gente de Oficio</a></li>
+        <ul>
+          <li><a href="#">Nosotros</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Blog</a></li>
+
+        </ul>
       </div>
     </div>
 
