Agregado de sugerencias Luis 19/11/2015-02

--- a/2.html
+++ b/2.html
@@ -263,19 +263,19 @@ Activar luego-->
     <div class="row">
       <div class="footer">
         <div class="col-xs-6 col-md-3 footer-01">
-          <h3>Footer-01</h3>
+          <h3><a href="#">Nosotros</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium et possimus soluta maxime nemo enim consequuntur asperiores earum excepturi odit ullam eaque doloribus quisquam perferendis architecto, repellendus minus maiores animi.</p>
         </div>
         <div class="col-xs-6 col-md-3 footer-02">
-          <h3>Footer-02</h3>
+          <h3><a href="#">Contacto</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique aperiam nobis qui. Aliquam soluta sed praesentium, aliquid mollitia. Rerum porro necessitatibus accusantium obcaecati error earum reiciendis aperiam explicabo, vero quam.</p>
         </div>
         <div class="col-xs-6 col-md-3 footer-03">
-          <h3>Footer-03</h3>
+          <h3><a href="#">Blog</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora commodi, facilis recusandae explicabo nisi laboriosam voluptas corrupti illo eos aspernatur nesciunt quasi consectetur perferendis, modi dolorem suscipit distinctio dolorum dolore.</p>
         </div>
         <div class="col-xs-6 col-md-3 footer-04">
-          <h3>Footer-04</h3>
+          <h3><a href="#">Forum</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam velit aspernatur explicabo mollitia suscipit natus, voluptates. Perspiciatis pariatur accusamus, voluptatibus possimus, corrupti quidem nulla deleniti iste, quia ratione natus.</p>
         </div>
       </div>
@@ -286,7 +286,7 @@ Activar luego-->
         <li>Powered by <a href="http://getbootstrap.com/">Bootstrap</a></li>
         <li>Copyright 2015 <a href="http://gentedeoficio.com/">Gente de Oficio</a></li>
         <ul>
-          <li><a href="#">Nosotros</a></li>
+          <li>Links: <a href="#">Nosotros</a></li>
           <li><a href="#">Contacto</a></li>
           <li><a href="#">Blog</a></li>
 
