--- a/3.html
+++ b/3.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navegador">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
@@ -59,11 +59,11 @@
 Para activar luego-->
             <div class="social navbar-right" >
 <ul class="list-inline">
-          <li><a href="https://www.facebook.com/universityofnewmexico" title="UNM on Facebook" class=""><span class="fa fa-facebook-square fa-2x">&nbsp;</span></a> </li>
-          <li><a href="https://twitter.com/unm" title="UNM on Twitter" class=""><span class="fa fa-twitter-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="https://www.facebook.com" title="GDO on Facebook" class=""><span class="fa fa-facebook-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="https://twitter.com" title="GDO on Twitter" class=""><span class="fa fa-twitter-square fa-2x">&nbsp;</span></a> </li>
 
-          <li><a href="http://www.youtube.com/user/unmlive" title="UNM on YouTube" class=""><span class="fa fa-youtube-square fa-2x">&nbsp;</span></a> </li>
-          <li><a href="/feed" title="The Pack RSS Feed" class=""><span class="fa fa-rss-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="http://www.youtube.com" title="UNM on YouTube" class=""><span class="fa fa-youtube-square fa-2x">&nbsp;</span></a> </li>
+          <!--<li><a href="/feed" title="The Pack RSS Feed" class=""><span class="fa fa-rss-square fa-2x">&nbsp;</span></a> </li>-->
           <li><a href="#">Login</a></li>
         </ul>
             </div>
@@ -86,10 +86,10 @@ Para activar luego-->
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
           <div class="item active">
-            <img src="http://placehold.it/1500x600/285F90/000000/Slide-01" alt="First slide">
+            <img src="http://placehold.it/1500x700/285F90/000000/Slide-01" alt="First slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
-                        <div class="col-md-12 text-center">
+                        <div class="col-md-6 text-center">
                             <h2>
                               <span>Welcome to <strong>LOREM IPSUM</strong></span>
                             </h2>
@@ -104,7 +104,7 @@ Para activar luego-->
                     </div><!-- /header-text -->
           </div>
           <div class="item">
-            <img src="http://placehold.it/1500x600/285F90/000000/Slide-01" alt="Second slide">
+            <img src="http://placehold.it/1500x700/285F90/000000/Slide-01" alt="Second slide">
             <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -122,7 +122,7 @@ Para activar luego-->
                     </div><!-- /header-text -->
           </div>
           <div class="item">
-            <img src="http://placehold.it/1500x600/285F90/000000/Slide-01" alt="Third slide">
+            <img src="http://placehold.it/1500x700/285F90/000000/Slide-01" alt="Third slide">
             <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -149,33 +149,9 @@ Para activar luego-->
       </a>
     </div><!-- /carousel -->
     <br>
-        <div class="row">
-      <div class="block-1">
-          <div class="col-sm-12 col-md-6">
-            <div class="thumbnail">
-              <img src="https://placehold.it/700x300" alt="Imagen 01">
-              <div class="caption">
-                <h3 class="text-center">AGENDA UNA CITA</h3>
-                <p class="text-center">Recibe el mejor Servicio</p>
-                <p class="text-center"><a href="#" class="btn btn-primary" role="button">Ingresar</a> <a href="#" class="btn btn-default" role="button">Registrarse</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6">
-            <div class="thumbnail">
-              <img src="https://placehold.it/700x300" alt="Imagen 01">
-              <div class="caption">
-                <h3 class="text-center">OFRECE TUS SERVICIOS</h3>
-                <p class="text-center">Se nuestro socio!!</p>
-                <p class="text-center"><a href="#" class="btn btn-primary" role="button">Ingresar</a> <a href="#" class="btn btn-default" role="button">Registrarse</a></p>
-              </div>
-            </div>
-          </div>
 
-      </div>
-    </div><!-- block-1 -->
   </div>
-  <div class="col-md-3 gdo-ads">
+  <div class="col-lg-3 gdo-ads">
 
       <h1 style="text-align: center;">Publicidad</h1>
 
@@ -204,8 +180,34 @@ Para activar luego-->
           </div>
           </div><!-- beguin of ads -->
   </div><!-- end of ads -->
+  <br>
 </div>
+<br>
+        <div class="row">
+      <div class="block-1">
+          <div class="col-sm-12 col-md-6">
+            <div class="thumbnail">
+              <img src="https://placehold.it/700x300" alt="Imagen 01">
+              <div class="caption">
+                <h3 class="text-center">AGENDA UNA CITA</h3>
+                <p class="text-center">Recibe el mejor Servicio</p>
+                <p class="text-center"><a href="#" class="btn btn-primary" role="button">Ingresar</a> <a href="#" class="btn btn-default" role="button">Registrarse</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <div class="thumbnail">
+              <img src="https://placehold.it/700x300" alt="Imagen 01">
+              <div class="caption">
+                <h3 class="text-center">OFRECE TUS SERVICIOS</h3>
+                <p class="text-center">Se nuestro socio!!</p>
+                <p class="text-center"><a href="#" class="btn btn-primary" role="button">Ingresar</a> <a href="#" class="btn btn-default" role="button">Registrarse</a></p>
+              </div>
+            </div>
+          </div>
 
+      </div>
+    </div><!-- block-1 -->
  <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12 well">
@@ -216,69 +218,89 @@ Para activar luego-->
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item align-center">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
+            <!--<div class="col-sm-12 col-md-6 col-lg-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/200x200" alt="">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/200x200" alt="">
+                </a>
+            </div>-->
         </div>
         <!-- /.row -->
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
-            <div class="col-md-3 portfolio-item">
+            <div class="col-xs-12 col-sm-6 col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
             </div>
+            <!--<div class="col-sm-12 col-md-6 col-lg-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/200x200" alt="">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/200x200" alt="">
+                </a>
+            </div>-->
         </div>
         <!-- /.row -->
 
 
   <div class="footer"><!-- Footer blocks -->
-        <div class="col-xs-6 col-md-3 footer-01">
+        <div class="col-sm-12 col-lg-3 footer-01">
           <h3><a href="#">Especialidades</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium et possimus soluta maxime nemo enim consequuntur asperiores earum excepturi odit ullam eaque doloribus quisquam perferendis architecto, repellendus minus maiores animi.</p>
         </div>
-        <div class="col-xs-6 col-md-3 footer-02">
+        <div class="col-sm-12 col-lg-3 footer-02">
           <h3><a href="#">Especialistas</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique aperiam nobis qui. Aliquam soluta sed praesentium, aliquid mollitia. Rerum porro necessitatibus accusantium obcaecati error earum reiciendis aperiam explicabo, vero quam.</p>
         </div>
-        <div class="col-xs-6 col-md-3 footer-03">
+        <div class="col-sm-12 col-lg-3 footer-03">
           <h3><a href="#">Comentarios</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora commodi, facilis recusandae explicabo nisi laboriosam voluptas corrupti illo eos aspernatur nesciunt quasi consectetur perferendis, modi dolorem suscipit distinctio dolorum dolore.</p>
         </div>
-        <div class="col-xs-6 col-md-3 footer-04">
+        <div class="col-sm-12 col-lg-3 footer-04">
           <h3><a href="#">Inscribirse</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam velit aspernatur explicabo mollitia suscipit natus, voluptates. Perspiciatis pariatur accusamus, voluptatibus possimus, corrupti quidem nulla deleniti iste, quia ratione natus.</p>
         </div>
@@ -301,7 +323,7 @@ Para activar luego-->
           <li><a href="https://twitter.com/unm" title="UNM on Twitter" class=""><span class="fa fa-twitter-square fa-2x">&nbsp;</span></a> </li>
           <li><a href="http://uofnm.tumblr.com" title="UNM on Tumblr" class=""><span class="fa fa-tumblr-square fa-2x">&nbsp;</span></a> </li>
           <li><a href="http://www.youtube.com/user/unmlive" title="UNM on YouTube" class=""><span class="fa fa-youtube-square fa-2x">&nbsp;</span></a> </li>
-          <li><a href="/feed" title="The Pack RSS Feed" class=""><span class="fa fa-rss-square fa-2x">&nbsp;</span></a> </li>
+          <!--<li><a href="/feed" title="The Pack RSS Feed" class=""><span class="fa fa-rss-square fa-2x">&nbsp;</span></a> </li>-->
         </ul>
         <p class="">busca mas en <a href="http://gentedeoficio.com.pa" title="Gente de Oficio &amp; Information" class="">gentedeoficio.com.pa</a> </p>
           </li>
